Spacing fixed

--- a/css/form.css
+++ b/css/form.css
@@ -273,8 +273,8 @@ table {
 .gamers__title {
   font-size: 60px;
   font-weight: 800;
-  margin-bottom: 50px;
-  margin-top: 200px;
+  margin-bottom: 75px;
+  margin-top: 100px;
   /* width: 530px;
   height: 74px; */
   /* left: 694px;
